
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int VectorscopeContext ;
typedef int AVFrame ;



__attribute__((used)) static void none_graticule(VectorscopeContext *s, AVFrame *out, int X, int Y, int D, int P)
{
}
